<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/add_task_dialog"
              android:orientation="vertical"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center">
    <EditText
        android:id="@+id/edit_task_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_task_name_dialog"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_task_description_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_task_description_dialog"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/select_task_group_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"></Spinner>

    <Button
        android:id="@+id/task_dialog_add_new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/task_dialog_add_new_task_btn"/>


    <Button
        android:id="@+id/task_dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/task_dialog_cancel_btn"/>

</LinearLayout>